# android-live555

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/xag/androidforlive555/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JavaListener.cpp  live555-rtsp.cpp  native-lib.cpp
app/src/main/cpp/BasicUsageEnvironment/: CMakeLists.txt
app/src/main/cpp/UsageEnvironment/: CMakeLists.txt
app/src/main/cpp/groupsock/: CMakeLists.txt
app/src/main/cpp/liveMedia/: CMakeLists.txt  DarwinInjector.cpp  JavaListener.cpp  MPEG1or2AudioRTPSink.cpp  Makefile.tail  Media.cpp  MultiFramedRTPSink.cpp  RTCP.cpp  RTPInterface.cpp  RTPSink.cpp  SimpleRTPSink.cpp
app/src/main/cpp/liveMedia/include/: DarwinInjector.hh  JavaListener.h  MPEG1or2AudioRTPSink.hh  MPEG2TransportStreamAccumulator.hh  Media.hh  RTPSink.hh  SimpleRTPSink.hh  liveMedia.hh
app/src/main/java/cn/xag/androidforlive555/: AudioRecorder.java  FileUtils.java  MainActivity.java
app/src/main/java/com/czt/mp3recorder/: DataEncodeThread.java  MP3Recorder.java  WavHeader.java
app/src/main/java/com/czt/mp3recorder/util/: ByteUtils.java  WavUtils.java
app/src/main/java/com/live555/push/: InitCallback.java  LivePush.java
app/src/main/java/com/piterwilson/audio/: MP3RadioStreamPlayer.java
app/src/main/java/com/shuyu/waveview/: AudioWaveTextureView.java  AudioWaveView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/xag/androidforlive555/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
